--- a/10-orderservice/Dockerfile
+++ b/10-orderservice/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:11-jre-slim
 
 ENV SPRING_PROFILES_ACTIVE=prod
 
-ADD target/configserver-1.0-SNAPSHOT.jar /app/configserver.jar
+ADD target/orderservice-1.0-SNAPSHOT.jar /app/orderservice.jar
 
-EXPOSE 8080
+EXPOSE 8081
 
 ENTRYPOINT ["java", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", "-jar", "/app.jar"]
