--- a/11-productservice/Dockerfile
+++ b/11-productservice/Dockerfile
@@ -1,4 +1,9 @@
-FROM adoptopenjdk/openjdk11:latest
-RUN mkdir -p /app
+FROM openjdk:11-jre-slim
+
+ENV SPRING_PROFILES_ACTIVE=prod
+
 ADD target/productservice-1.0-SNAPSHOT.jar /app/productservice.jar
-CMD java -Dspring.profiles.active=solo -Dserver.port=$PORT $JAVA_OPTS -jar /app/productservice.jar
+
+EXPOSE 8082
+
+ENTRYPOINT ["java", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", "-jar", "/app.jar"]
