--- a/12-customerservice/Dockerfile
+++ b/12-customerservice/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:11-jre-slim
 
 ENV SPRING_PROFILES_ACTIVE=prod
 
-ADD target/configserver-1.0-SNAPSHOT.jar /app/configserver.jar
+ADD target/customerservice-1.0-SNAPSHOT.jar /app/customerservice.jar
 
-EXPOSE 8080
+EXPOSE 8083
 
 ENTRYPOINT ["java", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", "-jar", "/app.jar"]
